# quotai

./: .gitmodules  README.md  debug.keystore.base64  gradle.properties  metadata.json
.github/workflows/: build.yml
app/: CMakeLists.txt  build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  amx.h  binary-ops.cpp  binary-ops.h  build-info.h  common.cpp  common.h  fit.cpp  fit.h  ggml-alloc.c  ggml-alloc.h  ggml-backend-impl.h  ggml-backend.cpp  ggml-backend.h  ggml-common.h  ggml-cpp.h  ggml-cpu-impl.h  ggml-cpu.c  ggml-cpu.cpp  ggml-cpu.h  ggml-impl.h  ggml-opt.cpp  ggml-opt.h  ggml-quants.c  ggml-quants.h  ggml-threading.cpp  ggml-threading.h  ggml.c  ggml.h  gguf.cpp  gguf.h  ime.cpp  ime.h  ime_env.h  kleidiai.h  llama-adapter.cpp  llama-adapter.h  llama-arch.cpp  llama-arch.h  llama-batch.cpp  (+61 more)
app/src/main/cpp/llama/: CMakeLists.txt
app/src/main/java/com/example/: MainActivity.kt
app/src/main/java/com/example/db/: QuoteDao.kt  QuoteDatabase.kt  QuoteEntity.kt
app/src/main/java/com/example/llama/: GgufMetadataReader.kt  LlamaCpp.kt
app/src/main/java/com/example/repository/: ModelRepository.kt  QuoteRepository.kt
app/src/main/java/com/example/ui/: QuotAiViewModel.kt
app/src/main/java/com/example/ui/screens/: DashboardScreen.kt  HistoryScreen.kt  ModelScreen.kt
app/src/main/java/com/example/ui/theme/: Color.kt  Theme.kt
app/src/main/java/com/example/widget/: QuoteWidgetProvider.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  widget_background.xml
app/src/main/res/layout/: quote_widget.xml
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: quote_widget_info.xml
